bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:3: error: not found: value &&
    case (90=<n && n=< 210) => return true
                ^NearHundred:3: error: not found: value =<
    case (90=<n && n=< 210) => return true
            ^NearHundred:3: error: not found: value =<
    case (90=<n && n=< 210) => return true
                    ^NearHundred:3: error: n is already defined as value n
    case (90=<n && n=< 210) => return true
                   ^NearHundred:4: error: not found: value &&
    case (190=<n && n=< 210) => return true
                 ^NearHundred:4: error: not found: value =<
    case (190=<n && n=< 210) => return true
             ^NearHundred:4: error: not found: value =<
    case (190=<n && n=< 210) => return true
                     ^NearHundred:4: error: n is already defined as value n
    case (190=<n && n=< 210) => return true
                    ^