bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  n match{
    case (90=<n && n=< 210) => return true
    case (190=<n && n=< 210) => return true
    case _ => return false
  }
}